added figures locally

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -261,7 +261,7 @@
         "### 1. Data structure in Pytorch: Tensors\n",
         "\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://miro.medium.com/v2/resize:fit:880/1*WbLIc4-xIOfHiO2oWzimyA.png\" width=\"700\"></div>\n",
+        "<div align=\"center\"><img src=\"figs/tensors.png\" width=\"700\"></div>\n",
         "\n",
         "\n",
         "In pytorch, tensors are the main data structure. They are similar to numpy arrays, but they can be used on GPU to accelerate computing.\n",
@@ -577,7 +577,7 @@
         "\n",
         "As data is loaded into the algorithms, it breathes life into the machine, granting it the ability to learn, adapt, and transform the world. Each data point represents a valuable piece of knowledge, and every dataset becomes a rich tapestry of information. The challenges of preprocessing and organizing the data are to be approached with determination, for with each step, AI gains the power to revolutionize industries, solve complex problems, and make a profound impact on humanity.\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://raw.githubusercontent.com/hdspgroup/pytorch-course/main/figs/datapipeline.png\" width=\"1000\"></div>\n",
+        "<div align=\"center\"><img src=\"figs/datapipeline.png\" width=\"1000\"></div>\n",
         "\n",
         "Normalization is crucial in data preprocessing for machine learning. By centering data around zero and adjusting its scale, training stability improves, preventing vanishing or exploding gradients. Furthermore, normalization reduces the negative impact of outliers, enhancing effective generalization to new data and preventing overfitting.\n",
         "\n",
@@ -744,7 +744,7 @@
         "\n",
         "\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://neurohive.io/wp-content/uploads/2018/11/vgg16-1-e1542731207177.png\" width=\"700\"></div>\n",
+        "<div align=\"center\"><img src=\"figs/vggnet.png\" width=\"700\"></div>\n",
         "\n",
         "\n",
         "The hidden layer in model can be different types of linear and non-linear mathematical functions, in the case of the proposed architecture, the model consists of the following components:\n",
@@ -852,7 +852,7 @@
         "PyTorch, provide a wide range of pre-implemented [loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions), making it convenient for practitioners to choose and apply the most suitable loss function for their specific problem.\n",
         "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).This loss function calculates the sum of the negative logarithm of predicted probabilities for the true class labels, penalizing larger discrepancies. Lower cross-entropy indicates better model alignment with actual data. It serves as an essential optimization objective during model training..\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://i.imgur.com/jx6lWhe.png\" width=\"600\"></div>\n",
+        "<div align=\"center\"><img src=\"figs/loss.png\" width=\"600\"></div>\n",
         "\n",
         "\n",
         "$$\n",
@@ -937,7 +937,7 @@
       "source": [
         "### Training Loop\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://i.imgur.com/S178PPX.png\" width=\"700\" ></div>"
+        "<div align=\"center\"><img src=\"figs/traningloop.png\" width=\"700\" ></div>"
       ]
     },
     {
@@ -1495,7 +1495,7 @@
         "\n",
         "The batch size determines **how many examples are used** together before adjusting the model. Experiments show that using a bigger batch often makes the model perform worse in terms of its ability to understand new things. Picking the right batch size involves carefully finding a balance between how training works and how well the model does. When the batch size gets larger, it can make training more steady and use the computer's power better. However, this might also make the model not as good at understanding new samples, which could lead to it fitting too closely to the training data and not being able to find new patterns in new data.\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://editor.analyticsvidhya.com/uploads/58182variations_comparison.png\" width=\"700\" ></div>\n",
+        "<div align=\"center\"><img src=\"figs/gradient_comparison.png\" width=\"700\" ></div>\n",
         "\n",
         "\n",
         "\n",
@@ -1642,7 +1642,7 @@
         "\n",
         "The learning rate is a hyperparameter that controls how quickly the model learns and adapts to the problem during training. Choosing the right learning rate is important for making sure the model converges efficiently to an optimal solution.\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://i.imgur.com/1ZPQw1l.png\" width=\"700\" ></div>\n",
+        "<div align=\"center\"><img src=\"figs/lr_comparison.png\" width=\"700\" ></div>\n",
         "\n",
         "\n",
         "**Low Learning Rate**\n",
@@ -1790,7 +1790,7 @@
         "\n",
         "Optimization refers to the process of adjusting the model's parameters in order to minimize a loss function. The choice of optimization algorithm and its hyperparameters can significantly impact the efficiency and effectiveness of the training process.\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://api.wandb.ai/files/lavanyashukla/images/projects/36993/2a6f771c.gif\" width=\"450\" ></div>\n",
+        "<div align=\"center\"><img src=\"figs/optimizers_comparison.gif\" width=\"450\" ></div>\n",
         "\n",
         "**Adam**\n",
         "\\\n",
@@ -1955,7 +1955,7 @@
         "\n",
         "\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://www.researchgate.net/profile/Brian-Davison/publication/339139382/figure/fig2/AS:856873737674754@1581306027943/Top-1-accuracy-versus-network-size-and-parameters-D201-Densenet201-Iv3-Inceptionv3.ppm\" width=\"400\" ></div>\n",
+        "<div align=\"center\"><img src=\"figs/parameters_comparison.png\" width=\"400\" ></div>\n",
         "\n",
         "\n",
         "**Tiny Model**\n",
