--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "c_d_XCXc-iNP"
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "NVXzqyvqBpiV"
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -675,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -776,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "oMLnlXKB4_2H"
       },
@@ -828,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "YOMiFVVtBpiV"
       },
@@ -865,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "AcgzFBRfBpiV"
       },
@@ -895,12 +895,69 @@
         "\n",
         "\n",
         "*   $\\theta$ are the network **trainable** parameters\n",
-        "*   $\\eta$ is the learning rate\n"
+        "*   $\\eta$ is the learning rate\n",
+        "\n",
+        "### Stochastic Gradient Descent (SGD)\n",
+        "\n",
+        "Stochastic gradient descent in contrast performs a parameter update for each training example of the training dataset. It cannot exploit vectorization, since it has to iterate through all the training examples and make an update for each training example. It also shows a lot of fluctuations before converginig to the solution.\n",
+        "\n",
+        "$$\n",
+        "\\theta= \\theta - \\eta \\frac{\\partial \\mathcal{L}_{ce}(\\theta, x^{(i)}, y^{(i)})}{\\partial θ}\n",
+        "$$\n",
+        "\n",
+        "### Root Mean Squared Propagation (RMSProp)\n",
+        "\n",
+        "Root Mean Squared Propagation is an adaptive learning rate method proposed by Geoff Hinton. The main idea is divide the gradient by a running average of its recent magnitudes.\n",
+        "\n",
+        "The RMSprop update is done as follows,\n",
+        "\n",
+        "$$\n",
+        "E[g^{2}]_{t}=\\gamma E[g^{2}]_{t-1}+(1-\\gamma)g^{2}_{t} \\\\\n",
+        "\\theta _{t+1}=\\theta _{t} - \\frac{\\eta}{\\sqrt{E[g^{2}]_{t}+ \\epsilon} }g_{t}\n",
+        "$$\n",
+        "\n",
+        "where,\n",
+        "\n",
+        "* $\\gamma$  Usually around 0.9.\n",
+        "* $\\eta$ Learning rate, usually around 0.001.\n",
+        "* $E[g^{2}]_{t}$ Decaying average of the past squared gradients at time step $t$.\n",
+        "\n",
+        "\n",
+        "### Adaptive Moment Estimation (Adam)\n",
+        "\n",
+        "Adam is another method that computes adaptive learning rates for each paramenter. It stores both the decaying average of the past gradiens $m_{t}$, similar to momentum and also the decaying average of the past squared gradients $v_{t}$. Thus, it combines the advantages of both the methods.\n",
+        "\n",
+        "The decaying average of the past gradients $m_{t}$ and the past squared gradients $v ̣{t}$ is computed as follows,\n",
+        "\n",
+        "$$\n",
+        "m_{t}= \\beta_{1}m_{t-1} + (1-\\beta_{1})g_{t} \\\\\n",
+        "v_{t}= \\beta_{2}v_{t-1} + (1-\\beta_{2})g_{t}^{2}\n",
+        "$$\n",
+        "\n",
+        "And since these $m_{t}$ and $v_{t}$ are initialized with zeros, they are biased towards zero, especially during the initial time steps. Thus, to avoid these biases, the bias corrected versions of them are computed as follows,\n",
+        "\n",
+        "$$\n",
+        "\\hat{m}_{t}= \\frac{m_{t}}{1-\\beta^{t}_{1}} \\\\\n",
+        "\\hat{v}_{t}= \\frac{v_{t}}{1-\\beta^{t}_{2}}\n",
+        "$$\n",
+        "\n",
+        "Thus, the Adam update is as follows,\n",
+        "\n",
+        "$$\n",
+        "\\theta _{t+1}=\\theta _{t} - \\frac{\\eta}{\\sqrt{\\hat{v}_{t}}+ \\epsilon }\\hat{m}_{t}\n",
+        "$$\n",
+        "\n",
+        "where,\n",
+        "\n",
+        "* $\\beta_{1}$ is usually 0.9.\n",
+        "* $\\beta_{2}$ is usually 0.999.\n",
+        "* $\\eta$ is the learning rate.\n",
+        "* $\\epsilon$ is usually of the order of $1e-8$."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "demMNjjE_3dK"
       },
@@ -938,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1159,7 +1216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "zN1TRsD5BpiV"
       },
@@ -1219,7 +1276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "LIWYPaY0BpiW"
       },
@@ -1244,7 +1301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1326,7 +1383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1367,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "F2f_LGcKejRN"
@@ -1454,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1598,7 +1655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1782,7 +1839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1922,7 +1979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
