--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -952,7 +952,49 @@
         "* $\\beta_{1}$ is usually 0.9.\n",
         "* $\\beta_{2}$ is usually 0.999.\n",
         "* $\\eta$ is the learning rate.\n",
-        "* $\\epsilon$ is usually of the order of $1e-8$."
+        "* $\\epsilon$ is usually of the order of $1e-8$.\n",
+        "\n",
+        "### Adadelta\n",
+        "\n",
+        "Adadelta is an extension of Adagrad that tries to reduce the monotonically decreasing learning rate. Instead of accumulating all past squared gradients, Adadelta stores only the window size $w$.\n",
+        "\n",
+        "And instead of storing all the past gradients of window size w, it stores the decaying average of the past squared gradients. The running average $E[g^{2}]_{t}$ at time step $t$ is calculated as,\n",
+        "\n",
+        "$$\n",
+        "E[g^{2}]_{t} = \\gamma E[g^{2}]_{t-1} + (1-\\gamma)g_{t}^{2}\n",
+        "$$\n",
+        "\n",
+        "The root mean squared (RMS) error of the gradient is therefore,\n",
+        "\n",
+        "$$\n",
+        "RMS[g]_{t} = \\sqrt{E[g^{2}]_{t} + \\epsilon}\n",
+        "$$\n",
+        "\n",
+        "And also the decaying average of the past squared updates is computed as,\n",
+        "\n",
+        "$$\n",
+        "E[\\Delta \\theta^{2}]_{t} = \\gamma E[\\Delta \\theta^{2}]_{t-1} + (1-\\gamma)\\Delta \\theta^{2}_{t}\n",
+        "$$\n",
+        "\n",
+        "The root mean squared (RMS) error of the updates is therefore,\n",
+        "\n",
+        "$$\n",
+        "RMS[\\Delta \\theta]_{t} = \\sqrt{E[\\Delta \\theta^{2}]_{t} + \\epsilon}\n",
+        "$$\n",
+        "\n",
+        "Since $RMS[\\Delta \\theta]_{t}$ is unknown, we approximate it with the RMS of parameter updates until the previous time step i.e $RMS[\\Delta \\theta]_{t-1}$\n",
+        "\n",
+        "Thus, the Adadelta update is donde as follows,\n",
+        "\n",
+        "$$\n",
+        "\\Delta \\theta_{t} = - \\frac{RMS[\\Delta \\theta]_{t-1}}{RMS[g]_{t}}g_{t} \\\\\n",
+        "\\theta_{t+1} = \\theta_{t} + \\Delta \\theta_{t}\n",
+        "$$\n",
+        "\n",
+        "Here, the parameters usually take the default value,\n",
+        "\n",
+        "* $\\gamma$ Usually around 0.9.\n",
+        "* $\\epsilon$ Smoothing term that avoids division by zero and is usually of order of $1e-8$."
       ]
     },
     {
