--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -851,7 +851,7 @@
         "PyTorch, provide a wide range of pre-implemented [loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions), making it convenient for practitioners to choose and apply the most suitable loss function for their specific problem.\n",
         "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).This loss function calculates the sum of the negative logarithm of predicted probabilities for the true class labels, penalizing larger discrepancies. Lower cross-entropy indicates better model alignment with actual data. It serves as an essential optimization objective during model training..\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://github.com/hdspgroup/pytorch-course/blob/main/figs/loss.png?raw=1\" width=\"600\"></div>\n",
+        "<div align=\"center\"><img src=\"https://github.com/hdspgroup/pytorch-course/blob/main/figs/CrossEntropy.png?raw=true width=\"300\"></div>\n",
         "\n",
         "\n",
         "$$\n",
@@ -884,18 +884,6 @@
       "source": [
         "## 5. Define optimizer: Gradient Descent (GD)\n",
         "\n",
-        "### Gradient Descent (GD)\n",
-        "\n",
-        "Gradient Descent is an optimization algorithm for finding a local minimum of a differentiable function. Gradient descent in machine learning and deep learning is simply used to find the values of a function's parameters (coefficients) that minimize a cost function as far as possible.\n",
-        "\n",
-        "$$\n",
-        "\\theta^{(k+1)} = \\theta^{(k)} - \\eta \\frac{\\partial \\mathcal{L}_{ce}}{\\partial θ}\n",
-        "$$\n",
-        "\n",
-        "\n",
-        "\n",
-        "*   $\\theta$ are the network **trainable** parameters\n",
-        "*   $\\eta$ is the learning rate\n",
         "\n",
         "### Stochastic Gradient Descent (SGD)\n",
         "\n",
@@ -904,6 +892,9 @@
         "$$\n",
         "\\theta= \\theta - \\eta \\frac{\\partial \\mathcal{L}_{ce}(\\theta, x^{(i)}, y^{(i)})}{\\partial θ}\n",
         "$$\n",
+        "\n",
+        "*   $\\theta$ are the network **trainable** parameters\n",
+        "*   $\\eta$ is the learning rate\n",
         "\n",
         "### Root Mean Squared Propagation (RMSProp)\n",
         "\n",
@@ -952,49 +943,7 @@
         "* $\\beta_{1}$ is usually 0.9.\n",
         "* $\\beta_{2}$ is usually 0.999.\n",
         "* $\\eta$ is the learning rate.\n",
-        "* $\\epsilon$ is usually of the order of $1e-8$.\n",
-        "\n",
-        "### Adadelta\n",
-        "\n",
-        "Adadelta is an extension of Adagrad that tries to reduce the monotonically decreasing learning rate. Instead of accumulating all past squared gradients, Adadelta stores only the window size $w$.\n",
-        "\n",
-        "And instead of storing all the past gradients of window size w, it stores the decaying average of the past squared gradients. The running average $E[g^{2}]_{t}$ at time step $t$ is calculated as,\n",
-        "\n",
-        "$$\n",
-        "E[g^{2}]_{t} = \\gamma E[g^{2}]_{t-1} + (1-\\gamma)g_{t}^{2}\n",
-        "$$\n",
-        "\n",
-        "The root mean squared (RMS) error of the gradient is therefore,\n",
-        "\n",
-        "$$\n",
-        "RMS[g]_{t} = \\sqrt{E[g^{2}]_{t} + \\epsilon}\n",
-        "$$\n",
-        "\n",
-        "And also the decaying average of the past squared updates is computed as,\n",
-        "\n",
-        "$$\n",
-        "E[\\Delta \\theta^{2}]_{t} = \\gamma E[\\Delta \\theta^{2}]_{t-1} + (1-\\gamma)\\Delta \\theta^{2}_{t}\n",
-        "$$\n",
-        "\n",
-        "The root mean squared (RMS) error of the updates is therefore,\n",
-        "\n",
-        "$$\n",
-        "RMS[\\Delta \\theta]_{t} = \\sqrt{E[\\Delta \\theta^{2}]_{t} + \\epsilon}\n",
-        "$$\n",
-        "\n",
-        "Since $RMS[\\Delta \\theta]_{t}$ is unknown, we approximate it with the RMS of parameter updates until the previous time step i.e $RMS[\\Delta \\theta]_{t-1}$\n",
-        "\n",
-        "Thus, the Adadelta update is donde as follows,\n",
-        "\n",
-        "$$\n",
-        "\\Delta \\theta_{t} = - \\frac{RMS[\\Delta \\theta]_{t-1}}{RMS[g]_{t}}g_{t} \\\\\n",
-        "\\theta_{t+1} = \\theta_{t} + \\Delta \\theta_{t}\n",
-        "$$\n",
-        "\n",
-        "Here, the parameters usually take the default value,\n",
-        "\n",
-        "* $\\gamma$ Usually around 0.9.\n",
-        "* $\\epsilon$ Smoothing term that avoids division by zero and is usually of order of $1e-8$."
+        "* $\\epsilon$ is usually of the order of $1e-8$.\n"
       ]
     },
     {
