--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -851,7 +851,7 @@
         "PyTorch, provide a wide range of pre-implemented [loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions), making it convenient for practitioners to choose and apply the most suitable loss function for their specific problem.\n",
         "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).This loss function calculates the sum of the negative logarithm of predicted probabilities for the true class labels, penalizing larger discrepancies. Lower cross-entropy indicates better model alignment with actual data. It serves as an essential optimization objective during model training..\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://github.com/hdspgroup/pytorch-course/blob/main/figs/CrossEntropy.png?raw=true width=\"300\"></div>\n",
+        "<div align=\"center\"><img src=\"https://github.com/hdspgroup/pytorch-course/blob/main/figs/CrossEntropy.png?raw=true\" width=\"700\"></div>\n",
         "\n",
         "\n",
         "$$\n",
